# go-static-linking

./: .CMakeLists.txt.swp  .cproject  .gitignore  .gitmodules  .project  BindConfig.txt  CMakeLists.txt  README.md
assets/: sample.py
demo/src/bridge/: bridge.go  bridge.go.in  callback.go
go/: test.go
go/src/bridge/: bridge.go
include/: junk.h
src/: junk.c
